textstroke.js solution init, base example works (correct line-height can not be applied yet though, clipping when lower than 1.1 while it needs to be 0.9. To be solved later)

--- a/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_page.scss
+++ b/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_page.scss
@@ -13,18 +13,38 @@
   }
 }
 
-.textcontent-wrapper {
-  margin-bottom: 2rem;
-  position: relative;
-  top: -1rem;
+.title-stroked {
+  z-index: 1;
+  margin: 0;
+  padding: 5px;
+  line-height: 1.1;
 
-  @media (min-width: 480px) {
-    top: -1.5rem;
+  &-container {
+    margin-bottom: 2rem;
+    position: relative;
+
+    @media (min-width: 480px) {
+      //top: -1.5rem;
+    }
+
+    @media (min-width: 1200px) {
+      //top: -3.8rem;
+    }
   }
 
-  @media (min-width: 1200px) {
-    top: -3.8rem;
+  &-wrapper {
+    position: relative;
+    //top: -2.5rem;
+
+    canvas {
+      position: relative;
+      top: 41px;
+      left: 0;
+      z-index: 0;
+      transform: scale(0.997);
+    }
   }
+
 }
 
 .top-tags {
